# reactauthbase

./: .gitignore  README.md  config.example.py  pyproject.toml
src/your-app-name-here/: __init__.py  index.html  package.json
src/your-app-name-here/src/: App.tsx  AuthContext.tsx  Header.tsx  privateRoutes.tsx
src/your-app-name-here/src/pages/: Account.tsx  HowItWorks.tsx  LandingPage.tsx  SignIn.tsx
